# isbot

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  security-audit.yml
benches/: regex_benchmarks.rs
examples/: actix_example.rs  rocket_example.rs
fixtures/: bots.txt  myip-ms-live-bots.json  omrilotan-browsers.json  ua-parser-bots.json  ua-parser-browsers.json
src/: bot_patterns.txt  bot_regex_patterns.txt  lib.rs
tests/: verify_bots.rs  verify_browsers.rs  verify_downloaded_bots.rs  verify_downloaded_browsers.rs
