[package]
name = "isbot"
version = "0.1.0"
edition = "2021"
authors = ["Bryan Morgan <bryan@thinkware.io>"]
description = "Detect if a user-agent is a known bot"
documentation = "https://docs.rs/isbot"
repository = "https://github.com/BryanMorgan/isbot/"
license = "MIT"
keywords = ["isbot", "bot", "crawler", "user-agent", "browser"]
categories = ["parsing", "web-programming", "web-programming::http-server"]
exclude = ["/src/bin"]

[features]
download-fixture-data = ["serde", "serde_json", "yaml-rust", "ureq"]

[dependencies]
regex = "1.5"

# Optional dependencies only needed to build the download_fixture_data binary
serde =  {version = "1.0", features = ["derive"], optional = true}
serde_json = {version = "1.0", optional = true}
yaml-rust = {version = "0.4", optional = true}
ureq = { version = "2.4",features = ["json"], optional = true}

[dev-dependencies]
serde_json = "1.0"

[[bin]]
name = "download_fixture_data"    
required-features = ["download-fixture-data"] 
