[package]
name = "isbot"
version = "0.1.0"
edition = "2021"
authors = ["Bryan Morgan <bryan@thinkware.io>"]
description = "Detect if a user-agent is a known bot"
documentation = "https://docs.rs/isbot"
repository = "https://github.com/BryanMorgan/isbot"
license = "MIT"
keywords = ["isbot", "bot", "crawler", "user-agent", "browser"]
categories = ["parsing", "web-programming", "web-programming::http-server"]
exclude = ["/src/bin"]
readme = "README.md"

[features]
default = ["include-default-bots"]
include-default-bots = []
download-fixture-data = ["serde", "serde_json", "yaml-rust", "ureq"]

[dependencies]
regex = "1.5.5"

# Optional dependencies only needed to build the download_fixture_data binary
serde =  {version = "1.0.136", features = ["derive"], optional = true}
serde_json = {version = "1.0.79", optional = true}
yaml-rust = {version = "0.4.5", optional = true}
ureq = { version = "2.4.0",features = ["json"], optional = true}

[dev-dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
rocket = "0.5.0-rc.1"
futures = "0.3.21"
serde_json = "1.0.79"
bytes = "1.1.0"

[[bin]]
name = "download_fixture_data"    
path = "src/bin/download_fixture_data.rs"
required-features = ["download-fixture-data"] 
